--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,11 @@
 version: 0.2
 phases:
+  install:
+    commands:
+      - "apt install unzip -y"
+      - "wget https://releases.hashicorp.com/terraform/1.2.7/terraform_1.2.7_linux_amd64.zip"
+      - "unzip terraform_0.11.14_linux_amd64.zip"
+      - "mv terraform /usr/local/bin/"
   build:
     commands:
       - sh ./poc_backend/build/build.sh
